--- a/requirements.txt
+++ b/requirements.txt
@@ -243,6 +243,7 @@ smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+Streamlit==1.17.0
 SQLAlchemy==1.4.44
 sqldf==0.4.2
 sqlparse==0.4.3
